# uproc

./: .clang-format  .gitignore  .travis.yml  AUTHORS  Doxyfile  Makefile  Makefile.am  Makefile.am.coverage  NEWS  README  README.rst  build.c  calib.c  common.c  common.h  config.mk  configure.ac  convert.c  detailed.c  devmode.c  devmode.h  dist_win.sh  ecurvePredictRevMex.c  export.c  files.c  files.h  format.bash  import.c  main.c  makedb.c  makedb_train_substmat.c  mat2bin.c  mat2plain.c  orf.c  ppopts.c  ppopts.h  uproc_opt.h
convert/: Makefile  convert.c
dist-win/: all.sh  clean.sh  common.sh  hostlibs.sh  package.sh  uproc.sh  winpthreads.sh  zlib.sh
include/: ecurve.h
include/ecurve/: alphabet.h  bst.h  classify.h  codon.h  common.h  distmat.h  ecurve.h  matrix.h  mmap.h  orf.h  storage.h  substmat.h  word.h
libecurve/: Doxyfile  Makefile
libecurve/include/: ecurve.h
libecurve/include/ecurve/: alphabet.h  bst.h  classify.h  common.h  dnaclass.h  ecurve.h  fasta.h  gz.h  io.h  matrix.h  mmap.h  orf.h  protclass.h  seqio.h  storage.h  substmat.h  word.h
libecurve/src/: alphabet.c  bst.c  classify.c  dnaclass.c  ecurve.c  fasta.c  gen_codon_tables.c  io.c  iupac.h  matrix.c  mmap.c  orf.c  protclass.c  seq.c  seqio.c  storage.c  substmat.c  timeit.h  word.c
libecurve/t/: IDENTITY_TWICE  alphabet.test.c  bst.test.c  classify.test.c  ecurve.test.c  ecurve_append.a2.plain  ecurve_append.b.plain  fasta.test.c  matrix.test.c  orf.test.c  storage.test.c  test.h  word.test.c
libupro/: Doxyfile  Makefile  Makefile.am  alphabet.c  dnaclass.c  ecurve.c  error.c  fasta.c  gen_codon_tables.c  io.c  matrix.c  mmap.c  word.c
libupro/include/: upro.h
libupro/include/upro/: alphabet.h  bst.h  codon.h  common.h  dnaclass.h  ecurve.h  error.h  fasta.h  io.h  matrix.h  mmap.h  orf.h  protclass.h  storage.h  substmat.h  word.h
libupro/src/: .gitignore  alphabet.c  bst.c  codon.c  dnaclass.c  ecurve.c  error.c  fasta.c  gen_codon_tables.c  io.c  iupac.h  matrix.c  mmap.c  orf.c  protclass.c  storage.c  substmat.c  word.c
libupro/t/: alphabet.test.c  bst.test.c  codon.test.c  common.test.c  ecurve.test.c  ecurve_append.a1.plain  fasta.test.c  matrix.test.c  orf.test.c  storage.test.c  test.h  word.test.c
libuproc/: Makefile.am  alphabet.c  bst.c  classifier.c  classifier_dna.c  classifier_internal.h  classifier_protein.c  codon.c  database.c  database_internal.h  dict.c  dnaclass.c  ecurve.c  ecurve_internal.h  ecurve_mmap.c  ecurve_storage.c  error.c  fasta.c  features.c  gen_codon_tables.c  idmap.c  io.c  list.c  matrix.c  mmap.c  model.c  model_internal.h  mosaic.c  orf.c  protclass.c  seqio.c  storage.c  substmat.c  util.h  word.c
libuproc/docs/: Makefile.am  doxyfile.in
libuproc/include/: Makefile.am  uproc.h
libuproc/include/uproc/: alphabet.h  bst.h  classifier.h  codon.h  common.h  database.h  dict.h  dnaclass.h  ecurve.h  error.h  fasta.h  features.h  idmap.h  io.h  list.h  matrix.h  mmap.h  model.h  mosaic.h  orf.h  protclass.h  seqio.h  storage.h  substmat.h  word.h
libuproc/tests/: Makefile.am  check_workaround.h  ck_alphabet.c  ck_bst.c  ck_classifier.c  ck_codon.c  ck_common.c  ck_dict.c  ck_idmap.c  ck_list.c  ck_matrix.c  ck_mosaic.c  ck_substmat.c  ck_uproc.c  ck_util.c  ck_word.c
libuproc/tests/data/: Makefile.am  dict_english_wordlist.txt  dict_single_words.txt  duplicate.idmap  invalid_header.idmap  invalid_header.matrix  missing_entry.idmap  missing_header.matrix
m4/: ac_attribute.m4  ax_cflags_warn_all.m4  gcov.m4  git_info.m4  uproc_git_version.m4
makedb/: Makefile.am  build_ecurves.c  calib.c  makedb.c  makedb.h  progress.c
old/: ecurveInsertDualNewMex.c  ecurvePredictNewMex.c
src/: Makefile.am  alphabet.c  bst.c  build.c  calib.c  classify.c  codon.c  convert.c  distmat.c  ecurve.c  main.c  main_omp.c  matrix.c  mmap.c  orf.c  pack.h  scoretable.c  storage.c  substmat.c  word.c
t/: .gitignore  alphabet.test.c  classify.test.c  codon.test.c  common.test.c  distmat.test.c  ecurve.test.c  ecurve.tmp  matrix.test.c  orf.test.c  seqio.test.c  storage.test.c  substmat.test.c  test.c  test.h  word.test.c
tests/: Makefile.am  ck_alphabet.c  ck_common.c  ck_upro.c
uproc-makedb/: Makefile.am  build_ecurves.c  calib.c  makedb.c  makedb.h
