nobase_include_HEADERS = uproc.h \
	uproc/alphabet.h \
	uproc/bst.h \
	uproc/codon.h \
	uproc/common.h \
	uproc/dnaclass.h \
	uproc/ecurve.h \
	uproc/error.h \
	uproc/fasta.h \
	uproc/io.h \
	uproc/matrix.h \
	uproc/mmap.h \
	uproc/orf.h \
	uproc/protclass.h \
	uproc/storage.h \
	uproc/substmat.h \
	uproc/word.h
