nobase_include_HEADERS = uproc.h \
	uproc/alphabet.h \
	uproc/bst.h \
	uproc/codon.h \
	uproc/common.h \
	uproc/dnaclass.h \
	uproc/ecurve.h \
	uproc/error.h \
	uproc/features.h \
	uproc/idmap.h \
	uproc/io.h \
	uproc/list.h \
	uproc/matrix.h \
	uproc/orf.h \
	uproc/protclass.h \
	uproc/seqio.h \
	uproc/substmat.h \
	uproc/word.h
