nobase_include_HEADERS = uproc.h \
	uproc/alphabet.h \
	uproc/bst.h \
	uproc/classifier.h \
	uproc/codon.h \
	uproc/common.h \
	uproc/dict.h \
	uproc/ecurve.h \
	uproc/error.h \
	uproc/features.h \
	uproc/idmap.h \
	uproc/io.h \
	uproc/list.h \
	uproc/matrix.h \
	uproc/mosaic.h \
	uproc/orf.h \
	uproc/seqio.h \
	uproc/substmat.h \
	uproc/word.h \
	uproc/database.h \
	uproc/model.h
